bad/assign_field_string_fcall_bool.example_compiler_output
ERROR
[1mbad/assign_field_string_fcall_bool.lat:8:12: [1;31merror: [0;1massigning to `string` from incompatible type `boolean`[m
	foo().fld = true;
	          [1;32m^[m
